force-app/main/default/objects/Account/fields/CodSAP__c.field-meta.xml
<CustomField>
    <fullName>CodSAP__c</fullName>
    <externalId>true</externalId>
    <label>CodSAP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>