force-app/main/default/objects/Account/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <label>Map</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>