force-app/main/default/objects/Account/fields/Teste__c.field-meta.xml
<CustomField>
    <fullName>Teste__c</fullName>
    <label>Teste</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>