force-app/main/default/objects/Account/validationRules/Conta_ValidaCNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_ValidaCNPJ</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
OR(LEN(CNPJ__c) = 0, AND(
IF(MOD((
VALUE(LEFT(CNPJ__c,1))*5+
VALUE(MID(CNPJ__c,2,1))*4+
VALUE(MID(CNPJ__c,3,1))*3+
VALUE(MID(CNPJ__c,4,1))*2+
VALUE(MID(CNPJ__c,5,1))*9+
VALUE(MID(CNPJ__c,6,1))*8+
VALUE(MID(CNPJ__c,7,1))*7+
VALUE(MID(CNPJ__c,8,1))*6+
VALUE(MID(CNPJ__c,9,1))*5+
VALUE(MID(CNPJ__c,10,1))*4+
VALUE(MID(CNPJ__c,11,1))*3+
VALUE(MID(CNPJ__c,12,1))*2
),11) &lt; 2,
VALUE(MID(CNPJ__c,13,1)) == 0,
11 - MOD((
VALUE(LEFT(CNPJ__c,1))*5+
VALUE(MID(CNPJ__c,2,1))*4+
VALUE(MID(CNPJ__c,3,1))*3+
VALUE(MID(CNPJ__c,4,1))*2+
VALUE(MID(CNPJ__c,5,1))*9+
VALUE(MID(CNPJ__c,6,1))*8+
VALUE(MID(CNPJ__c,7,1))*7+
VALUE(MID(CNPJ__c,8,1))*6+
VALUE(MID(CNPJ__c,9,1))*5+
VALUE(MID(CNPJ__c,10,1))*4+
VALUE(MID(CNPJ__c,11,1))*3+
VALUE(MID(CNPJ__c,12,1))*2
),11) == VALUE(MID(CNPJ__c,13,1))),
IF(MOD((
VALUE(LEFT(CNPJ__c,1))*6+
VALUE(MID(CNPJ__c,2,1))*5+
VALUE(MID(CNPJ__c,3,1))*4+
VALUE(MID(CNPJ__c,4,1))*3+
VALUE(MID(CNPJ__c,5,1))*2+
VALUE(MID(CNPJ__c,6,1))*9+
VALUE(MID(CNPJ__c,7,1))*8+
VALUE(MID(CNPJ__c,8,1))*7+
VALUE(MID(CNPJ__c,9,1))*6+
VALUE(MID(CNPJ__c,10,1))*5+
VALUE(MID(CNPJ__c,11,1))*4+
VALUE(MID(CNPJ__c,12,1))*3+
VALUE(MID(CNPJ__c,13,1))*2
),11) &lt; 2,
VALUE(MID(CNPJ__c,14,1)) == 0,
11 - MOD((
VALUE(LEFT(CNPJ__c,1))*6+
VALUE(MID(CNPJ__c,2,1))*5+
VALUE(MID(CNPJ__c,3,1))*4+
VALUE(MID(CNPJ__c,4,1))*3+
VALUE(MID(CNPJ__c,5,1))*2+
VALUE(MID(CNPJ__c,6,1))*9+
VALUE(MID(CNPJ__c,7,1))*8+
VALUE(MID(CNPJ__c,8,1))*7+
VALUE(MID(CNPJ__c,9,1))*6+
VALUE(MID(CNPJ__c,10,1))*5+
VALUE(MID(CNPJ__c,11,1))*4+
VALUE(MID(CNPJ__c,12,1))*3+
VALUE(MID(CNPJ__c,13,1))*2
),11) == VALUE(MID(CNPJ__c,14,1)))
)),
FALSE,TRUE
)</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>CNPJ inválido. Verifique e tente novamente.</errorMessage>
</ValidationRule>