force-app/main/default/objects/Account/validationRules/Conta_ValidaCPF.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_ValidaCPF</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
LEN(CPF__c)=0,
AND(MOD(MOD(11-MOD(
VALUE(MID(CPF__c,1,1))*10+
VALUE(MID(CPF__c,2,1))*9+
VALUE(MID(CPF__c,3,1))*8+
VALUE(MID(CPF__c,5,1))*7+
VALUE(MID(CPF__c,6,1))*6+
VALUE(MID(CPF__c,7,1))*5+
VALUE(MID(CPF__c,9,1))*4+
VALUE(MID(CPF__c,10,1))*3+
VALUE(MID(CPF__c,11,1))*2,11),11),10)=
VALUE(MID(CPF__c,13,1)),MOD(MOD(11-MOD(
VALUE(MID(CPF__c,1,1))*11+
VALUE(MID(CPF__c,2,1))*10+
VALUE(MID(CPF__c,3,1))*9+
VALUE(MID(CPF__c,5,1))*8+
VALUE(MID(CPF__c,6,1))*7+
VALUE(MID(CPF__c,7,1))*6+
VALUE(MID(CPF__c,9,1))*5+
VALUE(MID(CPF__c,10,1))*4+
VALUE(MID(CPF__c,11,1))*3+
VALUE(MID(CPF__c,13,1))*2,11),11),10)=
VALUE(MID(CPF__c,14,1)))
)
)

&amp;&amp;

NOT(
OR(
LEN(CPF__c)=0,
AND(MOD(MOD(11-MOD(
VALUE(MID(CPF__c,1,1))*10+
VALUE(MID(CPF__c,2,1))*9+
VALUE(MID(CPF__c,3,1))*8+
VALUE(MID(CPF__c,4,1))*7+
VALUE(MID(CPF__c,5,1))*6+
VALUE(MID(CPF__c,6,1))*5+
VALUE(MID(CPF__c,7,1))*4+
VALUE(MID(CPF__c,8,1))*3+
VALUE(MID(CPF__c,9,1))*2,11),11),10)=
VALUE(MID(CPF__c,10,1)),MOD(MOD(11-MOD(
VALUE(MID(CPF__c,1,1))*11+
VALUE(MID(CPF__c,2,1))*10+
VALUE(MID(CPF__c,3,1))*9+
VALUE(MID(CPF__c,4,1))*8+
VALUE(MID(CPF__c,5,1))*7+
VALUE(MID(CPF__c,6,1))*6+
VALUE(MID(CPF__c,7,1))*5+
VALUE(MID(CPF__c,8,1))*4+
VALUE(MID(CPF__c,9,1))*3+
VALUE(MID(CPF__c,10,1))*2,11),11),10)=
VALUE(MID(CPF__c,11,1)))
)
)

||

OR(
CPF__c = &apos;00000000000&apos;,
CPF__c = &apos;11111111111&apos;,
CPF__c = &apos;22222222222&apos;,
CPF__c = &apos;33333333333&apos;,
CPF__c = &apos;44444444444&apos;,
CPF__c = &apos;55555555555&apos;,
CPF__c = &apos;66666666666&apos;,
CPF__c = &apos;77777777777&apos;,
CPF__c = &apos;88888888888&apos;,
CPF__c = &apos;99999999999&apos;
)</errorConditionFormula>
    <errorDisplayField>CPF__c</errorDisplayField>
    <errorMessage>CPF Inválido. Verifique e tente novamente.</errorMessage>
</ValidationRule>